[tool.poetry]
name = "etch_a_tv"
version = "0.1.1"
description = "Draw images over the radio"
authors = ["Michaela <git@michaela.lgbt>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
pygame = "^2.0.1"
PyAudio = "^0.2.11"
scipy = "^1.6.0"
numpy = "^1.19.5"
pygame-gui = "^0.5.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
etch_a_tv = 'etch_a_tv:__main__.main'